@@ -1,6 +1,11 @@
 CHANGELOG blackberry ant tools
 ------------------------------
 
+2007/06/07 (josh)
+- Added optional property to RapcTask for changing the vm used to
+  execute the rapc command
+- Fourth release (0.4)
+
 2007/05/18 (josh)
 - Fixed library flag generation in JdpType class for sytem modules and
   applications that run on startup
